// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Offline warning can render 1`] = `
"
 [33m╭───────────────────────────╮[39m
 [33m│[39m [33m(⌒_⌒;) This is awkward...[39m [33m│[39m
 [33m╰───────────────────────────╯[39m

    ↳ ...you appear to be [1m[31moffline[39m[22m. If this is expected,
    ↳ feel free to ignore this warning or use the [1m[36m--ignore-warnings[39m[22m flag
"
`;

exports[`Offline warning does not render when offline and skipInstall === true 1`] = `
"
 [36m╭───────────╮[39m
 [36m│[39m [1madd babel[22m [36m│[39m
 [36m╰───────────╯[39m

    ↳ Finished [1m[37m1[22m[39m[1m of [22m[1m[37m2[22m[39m tasks ([1m5[22m skipped)

   [1m[32m✔ [22m[39mCreate Babel config file
   [1m[37m✔ [22m[39mAdd Babel build task to package.json
   [1m[37m✔ [22m[39mInstall Babel core, CLI, presets, and plugins

"
`;

exports[`Offline warning renders when offline and skipInstall === false 1`] = `
"
 [33m╭───────────────────────────╮[39m
 [33m│[39m [33m(⌒_⌒;) This is awkward...[39m [33m│[39m
 [33m╰───────────────────────────╯[39m

    ↳ ...you appear to be [1m[31moffline[39m[22m. If this is expected,
    ↳ feel free to ignore this warning or use the [1m[36m--ignore-warnings[39m[22m flag


 [36m╭───────────╮[39m
 [36m│[39m [1madd babel[22m [36m│[39m
 [36m╰───────────╯[39m

    ↳ Finished [1m[37m1[22m[39m[1m of [22m[1m[37m2[22m[39m tasks ([1m5[22m skipped)

   [1m[32m✔ [22m[39mCreate Babel config file
   [1m[37m✔ [22m[39mAdd Babel build task to package.json
   [1m[37m✔ [22m[39mInstall Babel core, CLI, presets, and plugins

"
`;
